--- a/config.yml
+++ b/config.yml
@@ -1,14 +1,25 @@
 ---
-project_name:  smartspin2k
+project_name: cpp-example-project
 loglevel: info
 analyses:
-- analysis_name: smartspin2k check
+- analysis_name: cpp check
   source_directory: d:/git/smartspin2k
-  .
-  .
-  .
+  only_permit_languages:
+  - cpp
+  only_permit_file_extensions:
+  - .cpp
+  - .h
+  file_scan:
+  - number_of_methods
+  - source_lines_of_code
+  - dependency_graph
+  - louvain_modularity
+  - fan_in_out
+  - tfidf
   export:
   - directory: d:/tools/emerge/export
-  .
-  .
-  .
+  - graphml
+  - json
+  - tabular_file
+  - tabular_console_overall
+  - d3
